--- a/JS_2/window_project/package.json
+++ b/JS_2/window_project/package.json
@@ -25,5 +25,8 @@
     "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.6.0",
+    "slick-carousel": "^1.8.1"
+  }
 }
